# DaMaSCUS-Earth-EVAP

./: .gitignore  BASH_MANUAL.md  CITATION.cff  CMakeLists.txt  Change.md  LICENSE  PROJECT_DOCUMENTATION.md  README.md  analyze_evap.py  comment.md  evaporation.py  evaporation_theory.py
Mission/: Mission_4.md
archive/: Data_Generation copy.cpp  main2.cpp
cmake/: ExpectCommandFailure.cmake  GenerateVersionHeader.cmake  PatchObscuraCrystalInitialization.cmake
include/: Data_Generation.hpp  MPI_Tail_Work.hpp  Parameter_Scan.hpp  Simulation_Trajectory.hpp  Simulation_Utilities.hpp  Snapshot_Heartbeat.hpp  Snapshot_IO.hpp  Snapshot_Shared_State.hpp  Solar_Model.hpp
src/: CMakeLists.txt  Data_Generation.cpp  MPI_Tail_Work.cpp  Parameter_Scan.cpp  Simulation_Trajectory.cpp  Simulation_Utilities.cpp  Snapshot_Heartbeat.cpp  Snapshot_IO.cpp  Snapshot_Shared_State.cpp  Solar_Model.cpp  main.cpp
tests/: CMakeLists.txt  config_capture_minimal.cfg  config_executable_smoke.cfg  config_snapshot_invalid_fractional.cfg  config_unittest.cfg  test_Data_Generation.cpp  test_MPI_Tail_Work.cpp  test_Parameter_Scan.cpp  test_Physics_Validation.cpp  test_Simulation_Trajectory.cpp  test_Simulation_Utilities.cpp  test_Snapshot_Heartbeat_MPI.cpp  test_Snapshot_IO.cpp  test_Solar_Model.cpp  test_benchmark_metrics.py  test_numerical_stability.py  test_physics_validation.py
validation/: README.md  __init__.py  physics_validation.py
